fix title spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,6 +238,7 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   font-size: 57px;
+  padding-right: 8px;
 }
 .word {
   position: absolute;
